--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BrandName-Insurance Project</title>
     <link rel="stylesheet" href="./css/style.css">
 
      <!-- font awesome -->
@@ -29,8 +29,8 @@
         </nav>
 
     <div class="icon">
-        <!-- <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-solid fa-cart-shopping"></i> -->
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-cart-shopping"></i>
         </div>
         <div class="member">
          <li>Login</li>
@@ -169,22 +169,22 @@
   <section class="company-logo-container">
    <div class="company-logo-content">
     <div>
-        <img src="./images/company-logo1.png" alt="">
+        <img src="./images/company-logo1.png" alt="" class="company-logo-img">
     </div>
     <div>
-        <img src="./images/company-logo2.png" alt="">
+        <img src="./images/company-logo2.png" alt="" class="company-logo-img">
     </div>
     <div>
-        <img src="./images/company-logo3.png" alt="">
+        <img src="./images/company-logo3.png" alt="" class="company-logo-img">
     </div>
     <div>
-        <img src="./images/company-logo4.png" alt="">
+        <img src="./images/company-logo4.png" alt="" class="company-logo-img">
     </div>
     <div>
-        <img src="./images/company-logo5.png" alt="">
+        <img src="./images/company-logo5.png" alt="" class="company-logo-img">
     </div>
     <div>
-        <img src="./images/company-logo6.png" alt="">
+        <img src="./images/company-logo6.png" alt="" class="company-logo-img">
     </div>
    </div>
   </section>
