customer review part updated

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </nav>
 
     <div class="icon">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-solid fa-cart-shopping"></i>
+        <i style="color: #9fa5a5;" class="fa-solid fa-magnifying-glass"></i>
+        <i style="color: #9fa5a5;" class="fa-solid fa-cart-shopping"></i>
         </div>
         <div class="member">
          <li>Login</li>
