footer section updated

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <!-- branches all over the world -->
      <section class="branches-container">
         <div class="branches-content">
-            <div>
+            <div class="branches">
                 <h3 style="font-size: 28px;font-weight: 500;">We Have Branches All <br>Over The World</h3>
                 <p style="color: #babbbb;font-size: 12px;">The gradual accumulation of information about atomic and<br> small scale behaviour during the first quarter of the 20th<br> century, which gave some indications about how small things<br>do behave, produced an increasing confusion which was <br>Heisenberg, and Born.</p>
             </div>
@@ -352,10 +352,11 @@
       <section class="appoinment-container">
         <div class="appoinment-content">
             <div>
-                <img src="./images/media.png" alt="">
+                <img class="appoinment-img" src="./images/media.png" alt="">
             </div>
             <div class="appoinment-form">
                 <h2 style="text-align: center; color: #252b42;">Book Appoinment</h2><br><br>
+                <h3 style="text-align: center; color: #252b42;">Get A Free<br>Quote Here</h3><br><br>
                 <form action="">
                     <label for="name" style="color: #252b42;"><b>Name*</b></label></required><br>
                     <input type="text" placeholder="Full Name*" name="name" id="name" class="form-box" required><br><br>
